# ROS2-image-stitcher

./: CMakeLists.txt  Dockerfile  README.md  entrypoint.sh  package.xml
src/: image_stitcher.cpp
